Closed Bug 187297 Opened 22 years ago Closed 22 years ago

ASSERTION: QueryInterface needed: 'query_result.get() == mRawPtr'

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

(Keywords: assertion)

Attachments

(1 file)

nsCOMPtr<nsPICertNotification>::Assert_NoQueryNeeded() line 501 + 41 bytes
nsCOMPtr<nsPICertNotification>::operator=(nsPICertNotification * 0x10c09710)
line 586
CertReader::CertReader(nsIURI * 0x1cddda90, nsISupports * 0x00000000,
nsPICertNotification * 0x10c09710) line 124
nsXPInstallManager::InitManager(nsXPInstallManager * const 0x10c096f8,
nsIScriptGlobalObject * 0x105d7fe8, nsXPITriggerInfo * 0x10c097b0, unsigned int
0) line 157 + 66 bytes
nsInstallTrigger::StartSoftwareUpdate(nsInstallTrigger * const 0x1cd481a4,
nsIScriptGlobalObject * 0x105d7fe8, const nsString & {...}, int 0, int *
0x0012f6d0) line 298 + 22 bytes
nsInstallTrigger::HandleContent(nsInstallTrigger * const 0x1cd481a8, const char
* 0x0012fa88, const char * 0x05d87d00, nsISupports * 0x0d3cb3d0, nsIRequest *
0x105631a0) line 157 + 48 bytes
nsURILoader::DispatchContent(nsURILoader * const 0x03a54780, const char *
0x0012fa88, int 1, nsIRequest * 0x105631a0, nsISupports * 0x00000000,
nsIURIContentListener * 0x0d3cb588, nsISupports * 0x0d3cb3d0, char * *
0x1cd4f2e8, nsIURIContentListener * * 0x0012fa18, int * 0x0012f9b0) line 871 +
49 bytes
nsDocumentOpenInfo::DispatchContent(nsIRequest * 0x105631a0, nsISupports *
0x00000000) line 361 + 157 bytes
nsDocumentOpenInfo::OnStartRequest(nsDocumentOpenInfo * const 0x1d4ff080,
nsIRequest * 0x105631a0, nsISupports * 0x00000000) line 229 + 16 bytes
nsHttpChannel::CallOnStartRequest() line 583 + 60 bytes
nsHttpChannel::OnStartRequest(nsHttpChannel * const 0x105631a4, nsIRequest *
0x1d04de24, nsISupports * 0x00000000) line 2945
nsOnStartRequestEvent::HandleEvent() line 161 + 53 bytes
nsARequestObserverEvent::HandlePLEvent(PLEvent * 0x1ce2d72c) line 116

###!!! ASSERTION: QueryInterface needed: 'query_result.get() == mRawPtr', file
../../dist/include/xpcom\nsCOMPtr.h, line 501
Break: at file ../../dist/include/xpcom\nsCOMPtr.h, line 501

I thought i had filed a bug for this or something like it.

Installing the german language pack from
http://www.hirsch.sth.ac.at/mozilla/de-AT.xpi

-	aObs	0x10c09710
\-	[nsXPInstallManager]	{...}
 |+	nsIXPIListener	{...}
 |+	nsIXPIDialogService	{...}
 |+	nsIObserver	{...}
 |+	nsIStreamListener	{...}
 |+	nsIProgressEventSink	{...}
 |+	nsIInterfaceRequestor	{...}
 |+	nsPICertNotification	{...}

  nsCOMPtr<nsPICertNotification> mObserver;
  mObserver = aObs;
Attachment #110467 - Flags: superreview?(dveditz)
Attachment #110467 - Flags: review?(dveditz)
Comment on attachment 110467 [details] [diff] [review]
do_QueryInterface

I'd prefer the initializations indented another space. sr=dveditz

This patch doesn't apply due to the recent NS_INIT_ISUPPORTS removal but I
trust you to fix that up too.
Attachment #110467 - Flags: superreview?(dveditz)
Attachment #110467 - Flags: superreview+
Attachment #110467 - Flags: review?(dveditz)
Attachment #110467 - Flags: review?(dougt)
Attachment #110467 - Flags: review?(dougt) → review+
yeah i own review blame for that conflict and i had to resolve it in my local
tree (it wasn't fun because of all of the constructor changes my tree has).

checked in (twice i'm just waking up).
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: