Bug 187297 ASSERTION: QueryInterface needed: 'query_result.get() == mRawPtr' r=dougt sr=dveditz